# Cpp_Engine_by_hand

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
Assets/: README.md
Assets/Materials/: README.md
Assets/Meshes/: README.md
Assets/Scenes/: README.md
Assets/Shaders/: README.md
Assets/Textures/: README.md
Documentation/: Architecture.md  Glossary.md  QA.md  README.md  RenderPipeline.md  Requirements.md  Tutorial.md
Engine/: CMakeLists.txt  README.md
Engine/Assets/: README.md
Engine/Core/: Application.cpp  Application.h  Assert.h  Layer.cpp  Layer.h  LayerStack.h  Log.cpp  Log.h  README.md  TIme.h  Time.h  Time_E.cpp  Time_E.h  a.out
Engine/Debug/: README.md
Engine/Math/: README.md
Engine/Platform/: README.md
Engine/RHI/: README.md
Engine/RHI/OpenGL/: README.md
Engine/Renderer/: README.md
Engine/Scene/: README.md
Engine/Tools/: README.md
Sandbox/: CMakeLists.txt  README.md  main.cpp
Tests/: README.md
